# kura

./: .gitignore  CLAUDE.md  Cargo.toml  NEXT.md  README.md  deny.toml
docs/: design-signals.md
src/: coverage.rs  diskref.rs  exists.rs  graph.rs  lib.rs  main.rs  model.rs  note.rs  report.rs  rules.rs  schema.rs  vault.rs  wikilink.rs
tests/: conformance.rs
tests/snapshots/: conformance__coverage_report.snap  conformance__jsonl_output.snap
