[package]
name = "kura"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Read-only knowledge-graph guardian/indexer for the Koopa Obsidian vault (蔵)"
license = "MIT"

[lib]
name = "kura"
path = "src/lib.rs"

[[bin]]
name = "kura"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
pulldown-cmark = "0.12"
ignore = "0.4"
unicode-normalization = "0.1"
thiserror = "2"
anyhow = "1"

[dev-dependencies]
insta = "1"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# 中英混排 doc comment 裡的英文識別字會誤觸;rust-spec:吵的 pedantic 用 allow 覆蓋
doc_markdown = "allow"
# lib code: make panic points visible (rust-spec rust-project-init)
unwrap_used = "warn"
expect_used = "warn"
