[package]
name = "kura"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Read-only knowledge-graph guardian/indexer for the Koopa Obsidian vault (蔵)"
license = "MIT"

[lib]
name = "kura"
path = "src/lib.rs"

[[bin]]
name = "kura"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
pulldown-cmark = "0.12"
ignore = "0.4"
unicode-normalization = "0.1"
# frontmatter is YAML; serde_yaml is unmaintained, so use a maintained pure parser and pull fields
# by hand. default-features = false drops the encoding/charset detection (frontmatter is UTF-8).
yaml-rust2 = { version = "0.11", default-features = false }
thiserror = "2"
anyhow = "1"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = { level = "deny", priority = -2 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# doc_markdown false-fires on technical terms with internal capitals (e.g. CommonMark)
doc_markdown = "allow"
# lib code: keep panic points visible
unwrap_used = "warn"
expect_used = "warn"
